MiniJavaComp/MiniJavaParser.java
/* Generated By:JavaCC: Do not edit this line. MiniJavaParser.java */
import java.io.*;
import java.util.Iterator;
import java.util.List;
import java.util.ArrayList;
import syntaxtree.*;
import visitor.BuildSymbolTableVisitor;
import visitor.TypeCheckVisitor;
import visitor.PrettyPrintVisitor;
import mips.MipsFrame;
import VisitorIR.BuildIRVisitor;
import Canon.Canon;
import Canon.BasicBlocks;
import Canon.TraceSchedule;
import Tree.PrintTree;
import Assem.*;
import Regalloc.*;
import FlowGraph.*;

// Classe de entrada da expressão e retorno da saída
public class MiniJavaParser implements MiniJavaParserConstants {
    public static void main(String []args) throws ParseException, IOException {
        // Recebe um nome de arquivo na entrada e direciona seu conteúdo ao parser
        MiniJavaParser parser = new MiniJavaParser(new FileInputStream(args[0]));
        Program p = parser.Program();

        // Constrói tabela de símbolos
        BuildSymbolTableVisitor buildSTVisitor = new BuildSymbolTableVisitor();
        buildSTVisitor.visit(p);

        // Realiza checagem de tipos com base na tabela de símbolos
        TypeCheckVisitor typeCheckVisitor = new TypeCheckVisitor(buildSTVisitor.getSymbolTable());
        typeCheckVisitor.visit(p);

        // Geração de código intermediário
        MipsFrame frame = new MipsFrame();
        BuildIRVisitor buildIRVisitor = new BuildIRVisitor(frame, buildSTVisitor.getSymbolTable());
        buildIRVisitor.visit(p);

        // Geração do código canônico
        FragAux.Frag next_frag = buildIRVisitor.frags.getNext();
        List<TraceSchedule> trace_list = new ArrayList<TraceSchedule>();
        //PrintTree printer = new PrintTree(System.out);

        while(next_frag.hasNext())
        {
            Tree.Stm body = ((FragAux.ProcFrag)next_frag).body;
            TraceSchedule trace_schedule = new TraceSchedule(new BasicBlocks(Canon.linearize(body)));
            trace_list.add(trace_schedule);

            Tree.StmList stml = trace_schedule.stms;

            while(stml != null)
            {
            //printer.prStm(stml.head);
            stml = stml.tail;
            }
            //System.out.println(); // Imprime uma linha vazia para separar os blocos

            next_frag = next_frag.getNext();
        }

        Tree.Stm body = ((FragAux.ProcFrag)next_frag).body;
        TraceSchedule trace_schedule = new TraceSchedule(new BasicBlocks(Canon.linearize(body)));
        trace_list.add(trace_schedule);

        Tree.StmList stml = trace_schedule.stms;

        while(stml != null)
        {
        //printer.prStm(stml.head);
        stml = stml.tail;
        }
        //System.out.println(); // Imprime uma linha vazia para separar os blocos

        // Seleção de instruções
        Iterator<TraceSchedule> itO = trace_list.iterator();
        InstrList instL = null;

        while (itO.hasNext()) {
            InstrList instrList = frame.codegen(itO.next().stms);
            for (InstrList i = instrList; i.tail != null; i = i.tail) {
                instL = new InstrList(i.head, instL);
            }
        }

        // Imprimir a lista de instruções
        /*InstrList aux = instL;
        while (aux != null) {
            System.out.print(aux.head.assem);
            System.out.println("\n");
            aux = aux.tail;
        }*/

        /* Análise de Longevidade */

        // Geração do grafo de fluxo de controle
        AssemFlowGraph flowGraph = new AssemFlowGraph(instL);
        //flowGraph.show(System.out);

        // Geração do grafo de interferência E ALOCAÇÃO DE REGISTRADORES
        Liveness interferenceGraph = new Liveness(flowGraph);
        // interferenceGraph.show(System.out); // Já não precisa de imprimir o grafo aqui

        // --- NOVA PARTE: ALOCAÇÃO DE REGISTRADORES ---
        new Color(interferenceGraph, frame, instL);

        // A classe Color irá (eventualmente) modificar instL ou retornar uma nova lista
        // com os registradores alocados. Por enquanto, a execução para aqui.

        System.out.println("\n--- Register Allocation Complete (no spill handling yet) ---");
    }

/*---------------------------------------------
Definição da gramática - Regras de Produção
---------------------------------------------*/
  final public Program Program() throws ParseException {
    MainClass m;
    ClassDeclList cl = new ClassDeclList();
    m = MainClass();
    cl = ClassDeclarationList();
    jj_consume_token(0);
      {if (true) return new Program(m, cl);}
    throw new Error("Missing return statement in function");
  }

  final public MainClass MainClass() throws ParseException {
    Identifier name, args;
    Statement s;
    jj_consume_token(CLASS);
    name = Identifier();
    jj_consume_token(LBRACE);
    jj_consume_token(PUBLIC);
    jj_consume_token(STATIC);
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(LPAREN);
    jj_consume_token(STRING);
    jj_consume_token(LSQPAREN);
    jj_consume_token(RSQPAREN);
    args = Identifier();
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    s = Statement();
    jj_consume_token(RBRACE);
    jj_consume_token(RBRACE);
      {if (true) return new MainClass(name, args, s);}
    throw new Error("Missing return statement in function");
  }

  final public ClassDecl ClassDeclaration() throws ParseException {
    Identifier name, nameSuper;
    VarDeclList vl;
    MethodDeclList ml;
    if (jj_2_1(3)) {
      jj_consume_token(CLASS);
      name = Identifier();
      jj_consume_token(LBRACE);
      vl = VarDeclarationList();
      ml = MethodDeclarationList();
      jj_consume_token(RBRACE);
      {if (true) return new ClassDeclSimple(name, vl, ml);}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        jj_consume_token(CLASS);
        name = Identifier();
        jj_consume_token(EXTENDS);
        nameSuper = Identifier();
        jj_consume_token(LBRACE);
        vl = VarDeclarationList();
        ml = MethodDeclarationList();
        jj_consume_token(RBRACE);
      {if (true) return new ClassDeclExtends(name, nameSuper, vl, ml);}
      {if (true) return null;}
        break;
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public ClassDeclList ClassDeclarationList() throws ParseException {
    ClassDecl c;
    ClassDeclList l = new ClassDeclList();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      c = ClassDeclaration();
                              l.addElement(c);
    }
      {if (true) return l;}
    throw new Error("Missing return statement in function");
  }

  final public VarDecl VarDeclaration() throws ParseException {
    Type t;
    Identifier name;
    t = Type();
    name = Identifier();
    jj_consume_token(SEMICOLON);
      {if (true) return new VarDecl(t, name);}
    throw new Error("Missing return statement in function");
  }

  final public VarDeclList VarDeclarationList() throws ParseException {
    VarDecl v;
    VarDeclList vl = new VarDeclList();
    label_2:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_2;
      }
      v = VarDeclaration();
                                          vl.addElement(v);
    }
      {if (true) return vl;}
    throw new Error("Missing return statement in function");
  }

  final public MethodDecl MethodDeclaration() throws ParseException {
    Type returnType;
    Identifier name;
    FormalList params = new FormalList();
    VarDeclList vl = new VarDeclList();
    StatementList sl = new StatementList();
    Exp returnExp;
    jj_consume_token(PUBLIC);
    returnType = Type();
    name = Identifier();
    jj_consume_token(LPAREN);
    params = ParamsList();
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    vl = VarDeclarationList();
    sl = StatementList();
    jj_consume_token(RETURN);
    returnExp = Expression();
    jj_consume_token(SEMICOLON);
    jj_consume_token(RBRACE);
      {if (true) return new MethodDecl(returnType, name, params, vl, sl, returnExp);}
    throw new Error("Missing return statement in function");
  }

  final public MethodDeclList MethodDeclarationList() throws ParseException {
    MethodDeclList ml = new MethodDeclList();
    MethodDecl m;
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
      m = MethodDeclaration();
                             ml.addElement(m);
    }
    {if (true) return ml;}
    throw new Error("Missing return statement in function");
  }

  final public FormalList ParamsList() throws ParseException {
    FormalList fl = new FormalList();
    Formal f;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER:
    case BOOLEAN:
    case ID:
      f = Param();
          fl.addElement(f);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case KOMMA:
          ;
          break;
        default:
          jj_la1[3] = jj_gen;
          break label_4;
        }
        jj_consume_token(KOMMA);
        f = Param();
                            fl.addElement(f);
      }
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
      {if (true) return fl;}
    throw new Error("Missing return statement in function");
  }

  final public Formal Param() throws ParseException {
    Type t;
    Identifier name;
    t = Type();
    name = Identifier();
      {if (true) return new Formal(t, name);}
    throw new Error("Missing return statement in function");
  }

  final public Type Type() throws ParseException {
    Type t;
    Identifier id;
    if (jj_2_3(2)) {
      /* Decide entre ArrayType (int []) e IntegerType (int) */
          t = ArrayType();
                      {if (true) return t;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
        t = BooleanType();
                          {if (true) return t;}
        break;
      case INTEGER:
        t = IntegerType();
                          {if (true) return t;}
        break;
      case ID:
        id = Identifier();
                          {if (true) return new IdentifierType(id.toString());}
      {if (true) return null;}
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public Type ArrayType() throws ParseException {
    jj_consume_token(INTEGER);
    jj_consume_token(LSQPAREN);
    jj_consume_token(RSQPAREN);
      {if (true) return new IntArrayType();}
    throw new Error("Missing return statement in function");
  }

  final public Type BooleanType() throws ParseException {
    jj_consume_token(BOOLEAN);
      {if (true) return new BooleanType();}
    throw new Error("Missing return statement in function");
  }

  final public Type IntegerType() throws ParseException {
    jj_consume_token(INTEGER);
      {if (true) return new IntegerType();}
    throw new Error("Missing return statement in function");
  }

  final public Statement Statement() throws ParseException {
    Statement s;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACE:
      s = Block();
                  {if (true) return s;}
      break;
    case IF:
      s = IfStatement();
                          {if (true) return s;}
      break;
    case WHILE:
      s = WhileStatement();
                             {if (true) return s;}
      break;
    case PRINT:
      s = PrintStatement();
                             {if (true) return s;}
      break;
    default:
      jj_la1[6] = jj_gen;
      if (jj_2_4(2)) {
        s = AssignStatement();
                                           {if (true) return s;}
      } else if (jj_2_5(2)) {
        s = ArrayAssignStatement();
                                                {if (true) return s;}
      {if (true) return null;}
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public StatementList StatementList() throws ParseException {
    Statement s;
    StatementList sl = new StatementList();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACE:
      case IF:
      case WHILE:
      case PRINT:
      case ID:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_5;
      }
      s = Statement();
                        sl.addElement(s);
    }
      {if (true) return sl;}
    throw new Error("Missing return statement in function");
  }

  final public Statement Block() throws ParseException {
    Statement s;
    StatementList sl = new StatementList();
    jj_consume_token(LBRACE);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACE:
      case IF:
      case WHILE:
      case PRINT:
      case ID:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_6;
      }
      s = Statement();
                           sl.addElement(s);
    }
    jj_consume_token(RBRACE);
      {if (true) return new Block(sl);}
    throw new Error("Missing return statement in function");
  }

  final public Statement IfStatement() throws ParseException {
    Exp e;
    Statement s1, s2;
    jj_consume_token(IF);
    jj_consume_token(LPAREN);
    e = Expression();
    jj_consume_token(RPAREN);
    s1 = Statement();
    jj_consume_token(ELSE);
    s2 = Statement();
      {if (true) return new If(e, s1, s2);}
    throw new Error("Missing return statement in function");
  }

  final public Statement WhileStatement() throws ParseException {
    Exp e;
    Statement s;
    jj_consume_token(WHILE);
    jj_consume_token(LPAREN);
    e = Expression();
    jj_consume_token(RPAREN);
    s = Statement();
      {if (true) return new While(e, s);}
    throw new Error("Missing return statement in function");
  }

  final public Statement PrintStatement() throws ParseException {
    Exp e;
    jj_consume_token(PRINT);
    jj_consume_token(LPAREN);
    e = Expression();
    jj_consume_token(RPAREN);
    jj_consume_token(SEMICOLON);
      {if (true) return new Print(e);}
    throw new Error("Missing return statement in function");
  }

  final public Statement AssignStatement() throws ParseException {
    Identifier id;
    Exp e;
    id = Identifier();
    jj_consume_token(ASSIGN);
    e = Expression();
    jj_consume_token(SEMICOLON);
      {if (true) return new Assign(id, e);}
    throw new Error("Missing return statement in function");
  }

  final public Statement ArrayAssignStatement() throws ParseException {
    Identifier id;
    Exp e1, e2;
    id = Identifier();
    jj_consume_token(LSQPAREN);
    e1 = Expression();
    jj_consume_token(RSQPAREN);
    jj_consume_token(ASSIGN);
    e2 = Expression();
    jj_consume_token(SEMICOLON);
      {if (true) return new ArrayAssign(id, e1, e2);}
    throw new Error("Missing return statement in function");
  }

/* PRECEDÊNCIA DE OPERADORES */
  final public Exp Expression() throws ParseException {
    Exp e;
    e = AndExpression();
      {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

  final public Exp AndExpression() throws ParseException {
    Exp x, y;
    x = CompareExpression();
    label_7:
    while (true) {
      if (jj_2_6(2)) {
        ;
      } else {
        break label_7;
      }
      jj_consume_token(AND);
      y = CompareExpression();
       x = new And(x, y);
    }
      {if (true) return x;}
    throw new Error("Missing return statement in function");
  }

  final public Exp CompareExpression() throws ParseException {
    Exp x, y;
    x = PlusExpression();
    if (jj_2_7(2)) {
      jj_consume_token(LTHAN);
      y = PlusExpression();
       x = new LessThan(x, y);
    } else {
      ;
    }
      {if (true) return x;}
    throw new Error("Missing return statement in function");
  }

  final public Exp PlusExpression() throws ParseException {
    Exp x, y;
    x = TimesExpression();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_8;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        jj_consume_token(PLUS);
        y = TimesExpression();
                                 x = new Plus(x, y);
        break;
      case MINUS:
        jj_consume_token(MINUS);
        y = TimesExpression();
                                 x = new Minus(x, y);
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
      {if (true) return x;}
    throw new Error("Missing return statement in function");
  }

  final public Exp TimesExpression() throws ParseException {
    Exp x, y;
    x = PrefixExpression();
    label_9:
    while (true) {
      if (jj_2_8(2)) {
        ;
      } else {
        break label_9;
      }
      jj_consume_token(TIMES);
      y = PrefixExpression();
          x = new Times(x, y);
    }
      {if (true) return x;}
    throw new Error("Missing return statement in function");
  }

  final public Exp PrefixExpression() throws ParseException {
    Exp e;
    int c = 0;
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NOT:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_10;
      }
      jj_consume_token(NOT);
           ++c;
    }
    e = PostfixExpression();
      for (int i=0; i<c; ++i) e = new Not(e);
      {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

  final public Exp PostfixExpression() throws ParseException {
    Exp e, pr;
    Identifier id;
    ExpList el = new ExpList();
    pr = PrimaryExpression();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LSQPAREN:
      case DOT:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_11;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LSQPAREN:
        jj_consume_token(LSQPAREN);
        e = Expression();
        jj_consume_token(RSQPAREN);
                                {if (true) return new ArrayLookup(pr, e);}
        break;
      default:
        jj_la1[14] = jj_gen;
        if (jj_2_9(2)) {
          jj_consume_token(DOT);
          id = Identifier();
          jj_consume_token(LPAREN);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case LPAREN:
          case TRUE:
          case FALSE:
          case THIS:
          case NEW:
          case NOT:
          case INTEGER_LITERAL:
          case ID:
            ExpressionList(el);
            break;
          default:
            jj_la1[13] = jj_gen;
            ;
          }
          jj_consume_token(RPAREN);
          {if (true) return new Call(pr, id, el);}
        } else if (jj_2_10(2)) {
          jj_consume_token(DOT);
          jj_consume_token(LENGTH);
          {if (true) return new ArrayLength(pr);}
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
      {if (true) return pr;}
    throw new Error("Missing return statement in function");
  }

  final public Identifier Identifier() throws ParseException {
  Token t;
    t = jj_consume_token(ID);
               {if (true) return new Identifier(t.image);}
    throw new Error("Missing return statement in function");
  }
